<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/save_event_button"
        android:layout_width="299dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="63dp"
        android:background="@drawable/solid_shape"
        android:gravity="center"
        android:text="Save"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="643dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/form"
        android:drawableStart="@drawable/ic_book"
        android:drawableLeft="@drawable/ic_book"
        android:drawablePadding="@dimen/padd_10"
        android:drawableTint="@color/cardview_dark_background"
        android:ems="30"
        android:hint="Event Description (No more than 120 character)..."
        android:inputType="textMultiLine"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_text" />

    <EditText
        android:id="@+id/time_picker_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="526dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/form"
        android:drawableStart="@drawable/ic_book"
        android:drawableLeft="@drawable/ic_book"
        android:drawablePadding="@dimen/padd_10"
        android:drawableTint="@color/cardview_dark_background"
        android:focusableInTouchMode="false"
        android:hint="Set time"
        android:inputType="time"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/date_picker_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="584dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/form"
        android:drawableStart="@drawable/ic_book"
        android:drawableLeft="@drawable/ic_book"
        android:drawablePadding="@dimen/padd_10"
        android:focusableInTouchMode="false"
        android:hint="Set a date"
        android:inputType="date"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@id/time_picker_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <EditText
        android:id="@+id/event_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="744dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/form"
        android:drawableStart="@drawable/ic_book"
        android:drawableLeft="@drawable/ic_book"
        android:drawablePadding="@dimen/padd_10"
        android:drawableTint="@color/cardview_dark_background"
        android:hint="@string/event_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_event_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_event_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="340dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="13dp"
                android:elevation="5dp"
                android:focusable="true"
                android:text="Switch"
                app:layout_constraintBottom_toBottomOf="@+id/reminder"
                app:layout_constraintEnd_toEndOf="@+id/reminder"
                 />

            <Button

                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/form_stroke_only"
                android:clickable="false"
                android:drawablePadding="@dimen/padd_10"
                android:focusableInTouchMode="false"
                android:gravity="start|top"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/alarm_reminder_before_1"
                android:textFontWeight="500"
                app:drawableLeftCompat="@drawable/alarm_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reminder_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="28dp"
                android:autoSizeTextType="uniform"
                android:elevation="5dp"
                android:text="@string/alarm_reminder_before_2"
                app:layout_constraintStart_toStartOf="@+id/reminder"
                app:layout_constraintTop_toTopOf="@+id/reminder" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/create_event_title"
        android:layout_width="610dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="Create Event"
        android:textColor="@color/primary_text"
        android:textFontWeight="1000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/event_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />



</RelativeLayout>